# laser_challenge_simulation

./: CMakeLists.txt  README.md  package.xml
config/: stage_four.yaml  trajectory_eight.yaml  turtle_view.rviz
launch/: challenge_world.launch  competition_simulation.launch  height_estimator_test.launch  stage_four.launch  turtlebot3_stage_four.launch  vision_world.launch
models/arena_spawn/: model.sdf
models/banner/: model.sdf
models/barcode_shelf/: model.sdf
models/box_A0/: model.sdf
models/box_A1/: model.sdf
models/box_A2/: model.sdf
models/box_A3/: model.sdf
models/box_B0/: model.sdf
models/box_B1/: model.sdf
models/box_B2/: model.sdf
models/box_B3/: model.sdf
models/box_C0/: model.sdf
models/box_C1/: model.sdf
models/box_C2/: model.sdf
models/box_C3/: model.sdf
models/box_D0/: model.sdf
models/box_D1/: model.sdf
models/box_D2/: model.sdf
models/box_D3/: model.sdf
models/codebar_box_a0/: model.config  model.sdf
models/codebar_box_a1/: model.config  model.sdf
models/landing_platform/: model.sdf
models/qrcode_box_a/: model.sdf
models/qrcode_box_b/: model.sdf
models/qrcode_box_c/: model.sdf
models/qrcode_box_d/: model.sdf
models/qrcode_box_e/: model.sdf
models/suspended_landing_platform/: model.sdf
scripts/: base_following.py  base_spawner.py  goto.bash
tmux_scripts/: stage_four.yml
urdf/: turtlebot3_burger_stage_four.urdf.xacro
worlds/: competition.world  stage_five.world  stage_four.world  stage_one.world  stage_test.world  stage_three.world  stage_two.world  stage_vision.world  test.world
(+7 files in other folders)
