<?xml version="1.0"?>
<package format="2">
  <name>laser_challenge_simulation</name>
  <version>1.0.1</version>
  <description>drone trials league sandbox pack</description>
  <maintainer email="avfs@academico.ufpb.br">Augusto Vinicius F de sales</maintainer>
  <maintainer email="wagnergarcia@cc.ci.ufpb.br">Wagner D Garcia</maintainer>

  <license>apache_license_2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>gazebo</depend>
  <depend>gazebo_ros</depend>
  <depend>mrs_gazebo_common_resources</depend> 
  <depend>rospy</depend>
  <depend>gazebo_msgs</depend>

  <export>
    <!-- gazebo_ros_paths_plugin automatically adds these to
      GAZEBO_PLUGIN_PATH and GAZEBO_MODEL_PATH when you do this export inside
      the package.xml file. You can than use URIs of type model://my_package/stuff. -->
    <gazebo_ros gazebo_media_path="${prefix}" />
    <gazebo_ros gazebo_model_path="${prefix}/models" />
  </export>
</package>